fixed css overlap issue (grey box) and repositioned touchpoint modal button appropriately

--- a/developer-journey-map/client/src/assets/styles/login.css
+++ b/developer-journey-map/client/src/assets/styles/login.css
@@ -15,7 +15,7 @@
     align-items: center;
 }
 
-.left {
+.login .left {
     height: 100%;
     flex: 1;
     display: flex;
@@ -27,7 +27,7 @@
     border-bottom-left-radius: 20px;
 }
 
-.left img {
+.login .left img {
     width: 65%;
     height: 65%;
 }
@@ -66,7 +66,7 @@
     color: white;
 }
 
-.right {
+.login .right {
     height: 100%;
     flex: 1;
     display: flex;
